# lert-speak

./: .gitignore  BUILD  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  api.Dockerfile  docker-build-push.sh  docker-run-api.sh  docker-run.sh
conf/: lertspeak-example.conf
src/: ApiSpeak.java  InteractiveSpeak.java  LertSpeak.java
src/cast/: CastMgr.java
src/nvr/: EventProc.java  JsonEventSocket.java
src/sonos/: SonosTest.java
src/upnp/: NoiseTest.java
src/voice/: HUtil.java  VoiceMedia.java
